syntax = "proto3";

package com.example.demo.api.criminal;

option go_package="example.com/soa/pb";

message CriminalVoteRequest {
  string room_id = 1;
  string victim_id = 3;
}

message CriminalVoteResponse {
}

service CriminalService {
  rpc Vote(CriminalVoteRequest) returns (CriminalVoteResponse);
}
